Compile base module as Java 8
The base module will be now compiled with Java 8
(release 8), as it should be possible to use it
with any Java 8 based project. Other modules
might use higher language levels if possible.